--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -5,6 +5,7 @@
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">192.168.5.104</domain>
         <domain includeSubdomains="true">192.168.88.118</domain>
+        <domain includeSubdomains="true">192.168.102.7</domain>
     </domain-config>
 
 </network-security-config>
